--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -69,7 +69,7 @@
             android:orientation="vertical" >
 
             <Button
-                android:id="@+id/buttonUrl"
+                android:id="@+id/main_btn_create"
                 style="@style/btnStyleios"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -78,7 +78,7 @@
                 android:textColor="@drawable/btn_txt" />
 
             <Button
-                android:id="@+id/saved"
+                android:id="@+id/main_btn_saved"
                 style="@style/btnStyleios"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -88,7 +88,7 @@
                 android:textColor="@drawable/btn_txt" />
 
             <Button
-                android:id="@+id/settings"
+                android:id="@+id/main_btn_settings"
                 style="@style/btnStyleios"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -98,7 +98,7 @@
                 android:textColor="@drawable/btn_txt" />
 
             <Button
-                android:id="@+id/exit"
+                android:id="@+id/main_btn_exit"
                 style="@style/btnStyleios"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
