--- a/res/layout/leg.xml
+++ b/res/layout/leg.xml
@@ -9,6 +9,8 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Leg" />
+        android:text="Leg"
+        android:textColor="#F09918"
+        android:textSize="48sp" />
 
 </FrameLayout>
