--- a/res/layout-land/fragment_measurement.xml
+++ b/res/layout-land/fragment_measurement.xml
@@ -31,7 +31,7 @@
             android:weightSum="1.0" >
 
             <Button
-                android:id="@+id/button1"
+                android:id="@+id/measurement_btn_save_sync"
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -39,7 +39,7 @@
                 android:text="Button" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/measurement_btn_save"
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
