--- a/res/layout/arm.xml
+++ b/res/layout/arm.xml
@@ -110,6 +110,36 @@
                 android:layout_weight=".2"
                 android:text="@string/help" />
         </LinearLayout>
+         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="1" >
+
+            <EditText
+                android:id="@+id/wrist_girth"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight=".5"
+                android:ems="10"
+                android:hint="Wrist girth" >
+
+                <requestFocus />
+            </EditText>
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight=".3"
+                android:text="" />
+
+            <Button
+                android:id="@+id/btn_wrist_girth"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight=".2"
+                android:text="@string/help" />
+        </LinearLayout>
     </LinearLayout>
 
 </FrameLayout>
