--- a/res/layout/activity_create.xml
+++ b/res/layout/activity_create.xml
@@ -3,6 +3,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     tools:context="fossasia.valentina.bodyapp.main.CreateActivity"
     tools:ignore="MergeRootFrame" >
 
