--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:paddingLeft="20dp"
-            android:text="TextView"
+            android:text="Hi"
             android:textSize="@dimen/abc_action_bar_title_text_size" />
 
     </LinearLayout>
