--- a/res/layout/activity_settings.xml
+++ b/res/layout/activity_settings.xml
@@ -63,6 +63,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp" />
+                <TextView
+                    android:id="@+id/settings_txt_connected"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp" />
 
                 <Button
                     android:id="@+id/settings_btn_signout"
