--- a/res/layout/neck.xml
+++ b/res/layout/neck.xml
@@ -37,7 +37,7 @@
             </EditText>
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/vsa_txt_mid_neck_girth"
                 android:layout_width="0dip"
                 android:layout_height="wrap_content"
                 android:layout_weight=".3" />
